// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logger should output correct log 1`] = `
Object {
  "level": 30,
  "msg": "Some message",
  "name": "test-log",
  "severity": "INFO",
}
`;

exports[`Logger should output correct log 2`] = `
Object {
  "level": 30,
  "msg": "Number 42",
  "name": "test-log",
  "severity": "INFO",
}
`;

exports[`Logger should output correct log 3`] = `
Object {
  "level": 40,
  "msg": "Achtung!",
  "name": "test-log",
  "severity": "WARNING",
}
`;

exports[`Logger should output correct log 4`] = `
Object {
  "level": 40,
  "msg": "WARNING!",
  "name": "test-log",
  "severity": "WARNING",
}
`;

exports[`Logger should output correct log 5`] = `
Object {
  "level": 50,
  "msg": "ERROR!",
  "name": "test-log",
  "severity": "ERROR",
}
`;

exports[`Logger should output correct log 6`] = `
Object {
  "level": 60,
  "msg": "FATAL!!!",
  "name": "test-log",
  "severity": "FATAL",
}
`;

exports[`Logger should output correct log for a child 1`] = `
Object {
  "foo": "bar",
  "level": 30,
  "msg": "Some message for child",
  "name": "test-log",
  "severity": "INFO",
}
`;

exports[`Logger should output correct log for a child 2`] = `
Object {
  "extra": "xtra",
  "foo": "bar",
  "level": 30,
  "msg": "Some message for child",
  "name": "test-log",
  "severity": "INFO",
}
`;
